# CheckAPIResponse

./: .gitignore  CMakeLists.txt  README.md  default.config
source/: common_soap.h  main.cpp  pch.h
source/common/: CMakeLists.txt  common.cpp  common_defs.h
test/data/: GetJob_response.xml
